# solarwinds-apm-ruby

./: .byebug_history  .codeclimate.yml  .dockerignore  .env  .gitignore  .hound.yml  .irbrc  .rubocop.yml  .travis.yml  .yardopts  Appraisals  CHANGELOG  CHANGELOG-appoptics.md  CHANGELOG.md  CONFIG.md  Dockerfile  Dockerfile_alpine  Dockerfile_test  Gemfile  README.md  Rakefile  Vagrantfile  appoptics.gemspec  appoptics_apm.gemspec  build_gem.sh  build_gem_upload_to_packagecloud.sh  build_gems.sh  docker-compose.yml  get_version.rb  init.rb  install.rb  instspec.rb  oboe.code-workspace  oboe.gemspec  oboe_fu.gemspec  release.sh  ruby_debug.sh  ruby_setup.sh  run_docker_build_gem_upload_to_packagecloud.sh  run_docker_dev.sh  (+8 more)
.github/: CODEOWNERS  codeql_analysis.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-or-feature-request.md
.github/codeql/: codeql-config.yml
.github/workflows/: build_and_release_gem.yml  build_for_github_package.yml  build_for_packagecloud.yml  codeql_analysis.yml  docker-arm-images.yml  docker-image.yml  docker-images.yml  postgres_example.yml  run_cpluplus_tests.yml  run_tests.yml  test_on_4_linux.yml  test_on_ubuntu.yml  test_on_ubuntu_arm.yml  verify_install.yml
.travis/: bundle.sh  get_oboe.sh
.yardoc/: checksums  object_types
coverage/: .last_run.json  codeclimate.json  index.html
doc/: AppOpticsAPM.html  _index.html  class_list.html  file.yardoc_frontpage.html  file_list.html  index.html  method_list.html  top-level-namespace.html
doc/AppOpticsAPM/: SDK.html
docs/: AppOpticsAPM.html  index.html  table_of_contents.html
docs/AppOpticsAPM/: API.html
docs/js/: search_index.js
examples/: DNT.md  carrying_context.rb  instrumenting_metal_controller.rb  prepend.rb  puma_on_heroku_config.rb  sdk_examples.rb  tracing_async_threads.rb  tracing_background_jobs.rb  tracing_forked_processes.rb  unicorn_on_heroku_config.rb
examples/SDK/: 01_basic_tracing.rb
ext/: LICENSE
ext/oboe_lib/: oboe.rb  oboe_wrap.cxx
ext/oboe_metal/: README.md  conftest  conftest.c  extconf.rb  extconf_local.rb  oboe.rb  oboe_metal.rb  oboe_metal_noop.rb  oboe_wrap.cxx
ext/oboe_metal/test/: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  frames_test.cc  logging_test.cc  profiling_test.cc  ruby_inc_dir.rb  ruby_prefix.rb  ruby_test_helper.rb  test.h  test_main.cc
gemfiles/: delayed_job.gemfile  frameworks.gemfile  grape.gemfile  instrumentation_mocked.gemfile  instrumentation_mocked_oldgems.gemfile  libraries.gemfile  libraries_oldgems.gemfile  mongo.gemfile  moped.gemfile  noop.gemfile  padrino.gemfile  profiling.gemfile  rails2.3.gemfile  rails23.gemfile  rails3.0.gemfile  rails3.1.gemfile  rails3.2.gemfile  rails30.gemfile  rails31.gemfile  rails32.gemfile  rails40.gemfile  rails41.gemfile  rails42.gemfile  rails50.gemfile  rails51.gemfile  rails52.gemfile  rails52_api.gemfile  rails60.gemfile  rails61.gemfile  rails70.gemfile  redis.gemfile  test_gems.gemfile  unit.gemfile
lib/: appoptics.rb  appoptics_apm.rb  base.rb  joboe_metal.rb  method_profiling.rb  oboe.rb  oboe_fu.rb  oboe_fu_util.rb  oboe_metal.rb  solarwinds_apm.rb  traceview.rb  util.rb
lib/appoptics/: api.rb  base.rb  config.rb  instrumentation.rb  loading.rb  (+10 more)
oboe_ext/: README  extconf.rb  oboe.gemspec  oboe.hpp  oboe_wrap.cxx
spec/: spec_helper.rb
test/: README.md  minitest_helper.rb  run_tests_docker.sh  settings
(+701 files in other folders)
